# AgentOne-AI-services

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
config/: models.azure.yaml  models.openrouter.yaml  models.test.yaml  models.yaml
docs/: configuration.md
ralph/: prd.json  progress.txt
scripts/: generate_env_docs.py
services/: __init__.py
services/llm_service/: __init__.py  main.py
services/llm_service/api/: __init__.py  protocol.py  registry.py
services/llm_service/core/: __init__.py
services/llm_service/core/config/: __init__.py  constants.py  models.py  settings.py
services/llm_service/core/llm/: __init__.py  azure_openai.py  azure_token.py  base.py  credentials.py  dispatcher.py  exceptions.py  factory.py  genai_platform.py  mixin.py  openai_client.py  openrouter_client.py  remote_client.py  retry.py  types.py  vertex.py
shared/: __init__.py
shared/protocol/: __init__.py  common.py  tool_models.py
shared/validators/: __init__.py  id_generators.py
tasks/: prd-tech-debt-review.md
tests/: __init__.py  conftest.py  test_base.py  test_config.py  test_credentials.py  test_cross_provider.py  test_dispatcher.py  test_genai_platform.py  test_main.py  test_mixin.py  test_protocol.py  test_retry.py  test_validators.py
tests/fixtures/: mock_error_response.json  mock_openai_response.json  mock_openai_stream.json  mock_tool_call_response.json
tests/integration/: README.md  __init__.py  test_llm_providers.py  test_vertex_integration.py
